2012-06-29  Francois Gouget  <fgouget@codeweavers.com>

	PR binutils/14302
	* bucomm.c (print_arelt_descr): Correctly report the archive size
	field (for 'ar tv').
	* ar.c (print_contents): Use correct types for archive element
	sizes (for 'ar p').
	(extract_file): Likewise (for 'ar x').

2012-06-29  Alan Modra  <amodra@gmail.com>

	* readelf.c (is_16bit_abs_reloc): Handle mn10200 reloc.

2012-06-12  Tom Tromey  <tromey@redhat.com>

	* dwarf-mode.el: Add final comment.  Bump version.
	(dwarf-insert-substructure-button): Use string-to-number.
	(dwarf-browse): Fix autoload cookie.

2012-06-08  Jakub Jelinek  <jakub@redhat.com>

	* dwarf.c (read_and_display_attr_value): Handle
	DW_FORM_GNU_ref_alt and DW_FORM_GNU_strp_alt.
	(display_debug_macro): Handle DW_MACRO_GNU_define_indirect_alt,
	DW_MACRO_GNU_undef_indirect_alt and
	DW_MACRO_GNU_transparent_include_alt.

2012-06-01  Alan Modra  <amodra@gmail.com>

	* addr2line.c (translate_addresses): Truncate input addresses to
	arch_size bits.  Avoid undefined shift.  Print '?' for zero line.

2012-05-30  Nick Clifton  <nickc@redhat.com>

	* readelf.c (process_section_headers): Correct bug in previous
	delta - display full section type in wide mode.

2012-05-28  Nick Clifton  <nickc@redhat.com>

	* readelf.c (print_symbol): Display multibyte characters in symbol
	names.
	(process_section_headers): Use print_symbol.

2012-05-18  Andreas Schwab  <schwab@linux-m68k.org>

	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* config.in: Regenerate.
	* Makefile.in: Regenerate.

2012-05-17  Daniel Richard G.  <skunk@iskunk.org>
	    Nick Clifton  <nickc@redhat.com>

	PR 14072
	* configure.in: Add check that sysdep.h has been included before
	any system header files.
	* configure: Regenerate.
	* config.in: Regenerate.
	* unwind-ia64.h: Include config.h.

2012-05-17  Alan Modra  <amodra@gmail.com>

	* dwarf.c (process_debug_info): Display abbrev offset in hex.
	(display_debug_abbrev): Show offset of abbrev.
